Bug 1333720 - Support Unknown/Unsupported widget type 13 and 17. r=karlt, a=jcristau